bug fixes; able to define vector by components

--- a/progress.html
+++ b/progress.html
@@ -38,6 +38,8 @@
 					<h1>About</h1>
 				</div>
 				<p>I am taking Physics at Smith this Spring. Because I learn well in a project based setting, I will also be participating in Hampshire's NS-299 course: Learning Activities Projects. I will develop an object-based software modeling platform for simulating physics scenarios.</p>
+
+				<iframe width="560" height="315" src="http://www.youtube.com/embed/60OVlfAUPJg" frameborder="0" allowfullscreen></iframe>
 					
 				<p>Objects will be able to have physical properties and vectors. These physical properties can be defined as functions of other physical properties. Vectors also can have their properties defined as functions. For example, an object, <em>ball,</em> can have its position defined as a function of its velocity, which can be represented by a vector.</p>
 
