added thing to index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<!--<script src="sugar-1.2.min.js"></script>-->
 	<script src="math.js"></script>
 	<script src="Vector.js"></script>
+	<script src="Thing.js"></script>
 </head>
 <body>
 
